tests/sqlcmd/baselines/errors/remove_classes3.errbaseline
SQL error while compiling query: SQL Syntax error in "REMOVE sqlcmdtest.InsertEmployee" unexpected token: REMOVE
